fixed dimmer not covering stuff outside original screen size

--- a/src/assets/styles/modal.css
+++ b/src/assets/styles/modal.css
@@ -4,7 +4,7 @@
 
 .modal-dimmer {
   background-color: rgba(0, 0, 0, 0.31);
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
